# LilDB

./: .gitignore  Cargo.toml  README.md  build.rs  todo.md
src/: main.rs
src/database_manager/: address.rs  collection.rs  configuration.rs  document.rs  mod.rs
src/database_manager/configuration/: config.rs  mod.rs  raw_config.rs
src/db_functions/: f_create.rs  f_delete.rs  f_drop.rs  f_find.rs  f_help.rs  f_insert.rs  f_update.rs  f_use.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/token_list/: mod.rs
src/tonic_grpc_manager/: mod.rs
