[package]
name = "LilDB"
version = "0.1.0"
edition = "2021"
build = "build.rs" 

[dependencies]
logos = "0.14.2"
tonic = "0.12.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
local-ip-address = "0.6.3"
reqwest = { version = "0.12.8", features = ["blocking"] }

[build-dependencies]
tonic-build = "0.12.3"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
codegen-units = 1
lto = "off"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
