[package]
name = "LilDB"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
logos = "0.15.0"
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
local-ip-address = "0.6.3"
reqwest = { version = "0.12.15", features = ["blocking"] }
chrono = "0.4.40"
threadpool = "1.8.1"
waitgroup = "0.1.2"

[build-dependencies]
tonic-build = "0.13.0"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
codegen-units = 1
lto = "off"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
