[package]
name = "LilDB"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
logos = "0.16.0"
tonic = "0.14.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
local-ip-address = "0.6.8"
reqwest = { version = "0.12.26" }
chrono = "0.4.42"
threadpool = "1.8.1"
waitgroup = "0.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tonic-prost = "0.14.2"
anyhow = "1.0.100"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
codegen-units = 1
lto = "off"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
